# pyprobe

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: main.py  registry.py
src/collectors/: cpu_collector.py
src/pyprobe/: logger.py  main.py  registry.py
src/pyprobe/collectors/: base_collector.py  cpu_collector.py  disk_collector.py  memory_collector.py  network_collector.py  utils.py
